<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="417dp"
        android:layout_height="238dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/gpass"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.503" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="GANTI PASSWORD"
            android:textSize="24dp" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="280dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/paslam"
                            android:layout_width="275dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="24dp"
                            android:background="@drawable/form_login"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/paslam"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="0dp"
                            android:paddingRight="0dp"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

                        <EditText
                            android:id="@+id/pasnew"
                            android:layout_width="275dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/form_login"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/pasnew"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
                            android:paddingLeft="0dp"
                            android:paddingRight="0dp" />
                        <EditText
                            android:id="@+id/conpas"
                            android:layout_width="275dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/form_login"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/conpas"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:paddingEnd="0dp"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
                            android:paddingLeft="0dp"
                            android:paddingRight="0dp" />

                            <Button
                                android:id="@+id/buttonUpdatePassword"
                                android:layout_width="275dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/button_login"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/passText"
                                android:textColor="@color/putih"/>
                            <Button
                                android:id="@+id/buttonBatal"
                                android:layout_width="275dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/button_keluar"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/batal"
                                android:textColor="@color/putih"
                                android:layout_marginBottom="24dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>