<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="417dp"
        android:layout_height="238dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivfoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.503" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="PROFIL"
            android:textSize="24dp" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="280dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/linearLayout0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView">

                            <TextView
                                android:id="@+id/textView0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="No Identitas"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/tvid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="right"
                                android:text="E31181295"
                                android:textSize="15dp" />


                        </RelativeLayout>

                        <View
                            android:id="@+id/view0"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:background="@color/abu_tua"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

                        <RelativeLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="Nama"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/tvnama"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="right"
                                android:text="Fariz Gustafianto"
                                android:textSize="15dp" />


                        </RelativeLayout>

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:background="@color/abu_tua"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/linearLayout" />


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/baris6">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_gravity="left"
                                android:text="Alamat"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/tvalamat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="right"
                                android:text="Jl.Manggar 5"
                                android:textSize="15dp" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <Button
                                android:id="@+id/editProfil"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_login"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/eproText"
                                android:textColor="@color/putih"
                                android:layout_marginRight="10dp"
                                android:onClick="eprofil"/>

                            <Button
                                android:id="@+id/gantiPassword"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_login"
                                android:fontFamily="@font/montserrat_semibold"
                                android:text="@string/passText"
                                android:textColor="@color/putih"
                                android:onClick="gpass"/>

                        </LinearLayout>

                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="0dp">
                        <Button
                            android:id="@+id/logout"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/button_keluar"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/outText"
                            android:textColor="@color/putih"/>
                    </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>